# kubetee-subnet

./: .dockerignore  .env.example  .gitignore  .markdownlint.json  ARCHITECTURE_GITHUB_LINKING.md  CHANGELOG.md  CLAUDE.md  Dockerfile  Dockerfile.base  Dockerfile.validator  README.md  REVERT_PLAN.md  SUBNET.md  docker-compose.yml  min_compute.yml  pyproject.toml  requirements.txt  setup.py
.claude/: settings.local.json
.github/workflows/: build.yml  ci.yml  docs.yml  release.yml  test.yml
.serena/: project.yml
cli/: __init__.py  referrer.py  reseller.py
contracts/: KubeTEEBuybackBurn.sol  KubeTEEEscrow.sol  KubeTEEPayment.sol  KubeTEEReseller.sol
docs/: CLUSTER_NAMING_CONVENTION.md  COMPETITIVE-PRICING.md  CONTRACT_MIGRATION_PLAN.md  Claude_Deep_Research.md  FIPS-140-3.md  GITHUB_LINKING_ARCHITECTURE.md  GITHUB_LINKING_GUIDE.md  GPU-NODE-REQUIREMENTS.md  Grok_XAI_Research.md  MINER_INFRA.md  NODE-REGISTRATION-SUMMARY.md  NODE-REGISTRATION.md  RUNNING_A_VALIDATOR.md  SECURITY_ANALYSIS.md  Subnet_62_Ridges.md  TOKENOMICS.md  UAT-g004.md  WORKFLOW-ORCHESTRATION.md  certification-confidential-containers.md  subnet-integrations-diagram.md
docs/architecture/: ARCHITECTURE.md
docs/architecture/containers/: basic_validator.py.md  miner-1-stub.md  miner-cluster.md  rancher-init.md  validator-container.md
docs/architecture/context/: data-flow.md  dependencies.md  overview.md
docs/architecture/diagrams/: workspace.dsl
docs/ideas/: bittensor-lifetime-scoring-model.md
docs/issues/: open-source-competition-implementation.md
docs/manual/: TESTING_AND_DEPLOYMENT_GUIDE.md
keys/: README.md
kubetee/: __init__.py
kubetee/api/: __init__.py  github.py  main.py
kubetee/cli/: __init__.py  github.py
kubetee/config/: networks.json
kubetee/contracts/: hardhat.config.js  package-lock.json  package.json
kubetee/contracts/contracts/: KubeTEEBuybackBurn.sol  KubeTEEBuybackBurnV2.sol  KubeTEEEscrow.sol  KubeTEEEscrowV2.sol  KubeTEEGitHubRegistry.sol  KubeTEEGitHubRegistryV2.sol  KubeTEEPayment.sol  KubeTEEPaymentV2.sol  KubeTEEReseller.sol  KubeTEEResellerV2.sol
kubetee/miner/: __init__.py
kubetee/ops/: .env.example  docker-compose.yml
kubetee/validator/: __init__.py  github_registry.py  github_verifier.py
neurons/: validator.py
scripts/: basic_validator.py  buyback_bot.py  chain_state.py  infrastructure_validation.py  logging_setup.py  miner_scoring.py  owner_validator.py  price_feed.py  print_subnet_stats.py  rancher_client.py  rancher_provision.sh  reconciliation.py  repair_bob_wallet.py  run_all_tests.sh  scoring_state.py  setup_automation.sh  setup_single_node.py  validator.py  validator_entrypoint.py  validator_metrics.py
template/: protocol.py
template/mechanisms/: __init__.py  bounty_system.py  bounty_validator.py  definitions.py  infrastructure.py  manager.py  open_source.py  resellers.py
template/payments/: __init__.py  x402.py
template/reseller/: __init__.py  credits.py  onchain.py  referral.py  wholesale.py
template/validator/: __init__.py  forward.py  revenue.py  reward.py
tests/: conftest.py  test_basic_validator.py  test_build_workflow_contract.py  test_chain_state.py  test_github_api.py  test_github_verifier.py  test_infrastructure_validation.py  test_miner_scoring.py  test_owner_validator.py  test_price_feed.py  test_print_subnet_stats.py  test_rancher_client.py  test_rancher_fixtures.py  test_rancher_provision_contract.py  test_reconciliation.py  test_scoring_pyramid.py  test_scoring_state.py  test_setup_single_node.py  test_template_validator.py  test_validator_entrypoint.py  test_validator_metrics.py  test_validator_operations_docs.py
tests/acceptance/: __init__.py  conftest.py  test_api_validation.py  test_cli_acceptance.py  test_contract_integration.py  test_e2e_github_linking.py
tests/integration/: README.md  __init__.py  mock_validator_server.py  run_integration_tests.sh  test_corner_cases.sh  test_github_repo_submission.py  test_link_github_happy_path.sh
(+28 files in other folders)
